# torrent-client-c

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: async_downloader.h  bencode.h  bitfield.h  client_state.h  connection_manager.h  magnet.h  metadata.h  peer.h  seeder.h  tracker.h
src/: async_downloader.c  bencode.c  bitfield.c  client_state.c  connection_manager.c  magnet.c  metadata.c  peer.c  seeder.c  tracker.c
